deploy/notejam-helm/templates/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notejam-app
  namespace: notejam-production
  labels:
    app.kubernetes.io/name: notejam
    app.kubernetes.io/env: production
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: notejam
